<resources>
<<<<<<< HEAD
    <string name="app_name">Huskeseddel</string>
    <string name="action_settings">Indstillinger</string>
    <string name="tilføjemne">Tilføj emne</string>
    <string name="textinput">Tilføj vare</string>
    <string name="add">+</string>
    <string name="deletebutton">x</string>
    <string name="about">Info</string>
    <string name="clear">Ryd</string>
    <string name="hinttext">Skriv her</string>
    <string name="addbuttontext">Tilføj</string>
    <string name="setpref">Indstillinger</string>
    <string name="deletebuttontext">Slet</string>
    <string-array name="howmanyarray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="themes_values">
        <item>White</item>
        <item>Bisque</item>
        <item>Dark Orange</item>
        <item>Steel Blue</item>
    </string-array>

    <string-array name="themes_type">
        <item>White</item>
        <item>Bisque</item>
        <item>Dark Orange</item>
        <item>Steel Blue</item>
    </string-array>
=======
    <string name="app_name">ShoppingList</string>
    <string name="action_settings">Settings</string>
    <string name="edit_text">Add your items</string>
>>>>>>> 5d229cb0267c0afbc2ecb934bd6428ba6d00b499
</resources>
