<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.projects.shoppinglist.MainActivity"
    android:id="@+id/layout"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Spinner
            android:id="@+id/howmanyspinner"
            android:entries="@array/howmanyarray"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <EditText
            android:id="@+id/itemInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:hint="@string/hinttext" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:measureWithLargestChild="false">

        <Button
            android:id="@+id/addButton"
            android:text="@string/addbuttontext"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:background="#607D8B"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="#b6b6b6"
            android:dividerHeight="1dp"
            android:layout_weight="7.26">

        </ListView>

        <Button
            android:id="@+id/deleteButton"
            android:text="@string/deletebuttontext"
            android:layout_width="202dp"
            android:layout_height="20dp"
            android:textColor="#ffffff"
            android:layout_weight="1"
            android:background="#607D8B"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>

